components/styles/navigation.module.css
.container {
    display: flex;
    width: 250px;
    position: sticky;
    top: -0.5px
}

.logoContainer {
    color: var(--success);
    margin-top: var(--gap);
    margin-bottom: var(--gap-double);
    margin-left: var(--gap);
}

.logoContainer2 {
    display: none;
    color: var(--success);
}

.nav {
    position: relative;
    width: 250px;
    height: 100vh;
    overflow-y: auto;
    overflow-x: hidden;
    border-right: var(--border);
    padding-inline: var(--gap);

}

.navItem {
    display: flex;
    align-items: center;
    gap: var(--gap);
    border-radius: var(--radius-big);
    width: fit-content;
    max-width: 230px;
    padding: var(--gap-half) var(--gap);
    margin-bottom: var(--gap);
}

.navItem p {
    overflow-x: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.navItem:hover {
    background-color: var(--accents-2);
    cursor: pointer;
}

.activeNav {
    color: var(--success);
    font-weight: bold;
}

.postButtonContainer {
    display: flex;
    flex-direction: column;
    position: absolute;
    margin-bottom: var(--gap);
}

.postButtonContainer .navItem {
    color: var(--foreground);
}

.postButton {
    font-weight: normal;
    font-size: large;
    padding: .5em 3em;
    max-width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}



.requestModal {
    width: min(95vw, 400px);

    background-color: var(--background);
}

.requestContainer {
    position: relative;
    width: 100%;
    min-height: 50vh;
    max-height: 90vh;
    overflow-y: auto;
    padding-bottom: var(--gap);
}


.requestHeader {
    display: flex;
    justify-content: space-between;
    padding: 0 var(--gap-half) 0 var(--gap);
    align-items: center;
    border-bottom: var(--border);
    width: 100%;
}

.requestHeader p {
    font-size: 18px;
    font-weight: 510;
}

.closeContainer {
    color: var(--accents-3);
    cursor: pointer;
    padding: var(--gap-half);
    border-radius: 50%
}


.imageContainer {
    width: 100%;
}

.profileImage {
    width: 100%;
}

.titleContainer {
    text-align: center;
    margin-block: var(--gap-half);
    padding-inline: var(--gap-quarter);
}

.userName {
    font-weight: 700;
    font-size: 18px;
    color: var(--accents-6);
    overflow: hidden;
    text-overflow: ellipsis;
}

.realName {
    font-weight: 600;
    font-size: 30px;
    line-height: 25px;
}

.requestButtons {
    display: flex;
    flex-direction: column;
    gap: var(--gap-half);
    align-items: center;
    width: 100%;
}

.requestButtons button {
    font-size: 20px;
    padding: .5em .2em;
    width: 90%
}

.acceptBtn {
    background-color: lime;
    margin-bottom: var(--gap-half);
}

.declineBtn {
    background-color: transparent;
    border: 1px solid var(--error);
    color: var(--error)
}

@media screen and (max-height: 700px) {
    .requestContainer {
        max-height: 80vh;
    }

}

@media only screen and (max-width: 950px) {
    .container {
        width: 120px;
        justify-content: center;
    }

    .nav {
        width: 120px;
    }

    .navItem p {
        display: none;
    }

    .postButtonContainer .navItem {
        margin-left: 0
    }

    .postButton {
        border-radius: 50%;
        display: grid;
        padding: 1em 0;
        place-items: center;
    }

    .postButton span {
        display: none;
    }
}

@media only screen and (max-width: 750px) {
    .container {
        position: fixed;
        margin: 0;
        padding: 0;
        width: 100vw;
        border-right: none;
        z-index: 1;
    }

    .nav {
        display: flex;
        flex-direction: row;
        border-right: none;
        height: auto;
        padding: var(--gap-half) var(--gap);
        position: fixed;
        justify-content: space-between;
        bottom: 0;
        width: 100%;
        border-top: var(--border);
        background-color: var(--background);
    }

    .navItem {
        padding: 0;
        margin: 0;
    }

    .logoContainer {
        display: none;
    }

    .logoContainer2 {
        display: block;
    }

    .postButtonContainer {
        background-color: var(--background);
        border-bottom: var(--border);
        height: 50px;
        width: 100vw;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 1;
        padding-inline: var(--gap-half);

    }

    .postButton {
        margin: 0;
        background-color: transparent;
        border-radius: var(--radius-small);
        box-shadow: none;
        color: var(--foreground);
        border: 1px solid var(--foreground);
        padding: 1px;
    }
}

